--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <h1>Goblin Machine</h1>
     <img src="images/gob_machine.webp" alt="Goblin Machine" />
-    <button>change user</button>
+    <button>Change User</button>
     <p><a target="_blank" href="https://supercell.com/en/games/clashroyale/">Goblin machine orgin point is from clash
             royale.</a></p>
     <p>The Goblin Machine is a 5-elixir Legendary troop that can target both air and ground enemies, but in two very
