Added a new function for To-Do list

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <h2>✅ To-Do List: Goblin Machine Edition</h2>
     
-    <ul>
+    <ul id="todo">
         <li>Test Goblin Machine in Friendly Battles or Challenges</li>
         <li>Build and try a deck with Goblin synergy or control elements</li>
         <li>Practice defending its blind spot with fast melee units</li>
