--- a/index.html
+++ b/index.html
@@ -90,6 +90,20 @@
         <li>Learn top counters like Mini P.E.K.K.A, Tombstone, and Rocke</li>
         <li>Record or share a clip showing its dual-mode in action</li>
     </ul>
+
+
+
+
+
+
+
+    <ul id="list">
+    <li> Item 1 </li>
+    <li> Item 2 </li>
+    <li> Item 3 </li>
+    </ul>
+    <button type="button" id="btn"> Click to change all item colors black </button>
+
 <script>
     console.log("Hello World");
     let score=42; // mutable
@@ -137,6 +151,9 @@
     for (let fruit of fruits){
         console.log(fruit)
     }
+
+
+   
 
 </script>
 </body>
